# active-call

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross-aarch64  Dockerfile.cross-x86_64  README.md  active-call.example.toml  dialogue.md
.github/workflows/: docker-image.yml
config/: telnyx.example.toml
config/playbook/: hello.md
docs/: README.md  api.md  playbook_advanced_features.md  playbook_tutorial.en.md  playbook_tutorial.zh.md  sip_variable_system.md  telnyx_integration.md
examples/: process_audio.rs
src/: app.rs  config.rs  event.rs  lib.rs  main.rs
src/call/: active_call.rs  mod.rs  sip.rs
src/callrecord/: mod.rs
src/handler/: api.rs  handler.rs  mod.rs
src/media/: ambiance.rs  asr_processor.rs  denoiser.rs  dtmf.rs  engine.rs  inactivity.rs  mod.rs  negotiate.rs  processor.rs  realtime_processor.rs  recorder.rs  stream.rs  volume_control.rs
src/media/tests/: denoiser.rs  media_pass.rs  perf_analysis.rs  perf_rtp_recorder.rs  recorder.rs  recorder_rtp.rs  stream.rs
src/media/track/: file.rs  media_pass.rs  mod.rs  rtc.rs  rtp.rs  track_codec.rs  tts.rs  webrtc.rs  websocket.rs
src/media/vad/: benchmark_all.rs  mod.rs  tests.rs
src/playbook/: dialogue.rs  handler.rs  mod.rs  runner.rs
src/playbook/handler/: dtmf_collector_tests.rs  mod.rs  (+1 more)
src/synthesis/: mod.rs
src/transcription/: aliyun.rs  mod.rs  sensevoice.rs  tencent_cloud.rs  tests.rs  voiceapi.rs
src/useragent/: invitation.rs  mod.rs  playbook_handler.rs  registration.rs
static/: app.js  index.html
tests/: asr_pause_resume_test.rs  autohangup_headers_test.rs  call_tests.rs  callrecord_tests.rs  hold_asr_continuity_test.rs  multi_scene_test.rs  playbook_runner_tests.rs  playbook_tests.rs  refactor_validation_test.rs  sip_183_200_reinvite_test.rs  sip_hold_test.rs  sip_integration_test.rs  test_credentials_match.rs  useragent_tests.rs  webrtc_audio_receive_test.rs
